<resources>
    <string name="app_name">Student Attendance</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="register_no">Register Number</string>
    <string name="system_no">System Number</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="name_title">Name:</string>
    <string name="register_no_title">Register Number:</string>
    <string name="system_no_title">System Number:</string>
    <string name="in_time_title">In Time:</string>
    <string name="out_time_title">Out Time:</string>
    <string name="date">Date</string>
    <string name="login_fingerprint_hint">Login with fingerprint</string>
    <string name="register_fingerprint_hint">Register with fingerprint</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_register_no">Enter your register number</string>
    <string name="enter_system_no">Enter your system number</string>
    <string name="enter_valid_name_systemno">Please enter valid Name and System Number</string>
    <string name="name_already_exists">Name already exists</string>
    <string name="registerno_already_exists">Register Number already exists</string>
    <string name="systemno_already_exists">System Number already exists</string>
    <string name="title_fingerprint">One-touch Verify</string>
    <string name="fingerprint_signin">Touch Fingertip Scanner to Log In</string>
    <string name="fingerprint_register">Touch Fingertip Scanner to Register</string>
    <string name="fingerprint_signout">Touch Fingertip Scanner to Log Out</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="fingerprint_note">(Fingerprint verification makes your app to verify users much faster. Your device should have at least one fingerprint registered in device settings)</string>

    <string name="logout_lbl">Logout</string>
    <string name="want_logout">Are you sure you want to Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_success">You have successfully Logged Out!</string>
    <string name="loging_success">You have successfully Logged In!</string>
    <string name="register_success">You have successfully Registered!</string>
    <string name="search_hint">Search name, register number, system number</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search">Search</string>

</resources>
