<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vittal.studentattendance.activity.RegisterActivity">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/actionBarTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/login_title_textsize" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registerNumberEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/registerNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_no"
                android:maxLength="25"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/systemNumberEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/systemNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/system_no"
                android:maxLength="12"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/fingerPrintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fingerprint_bg"
            android:orientation="horizontal"
            android:padding="@dimen/padding_15">

            <ImageView
                android:id="@+id/fingerPrintImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_fingerprint" />

        </LinearLayout>

        <TextView
            android:id="@+id/registerHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprint_hint"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/login_hint_textsize"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
