<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fingerprint_bg"
    tools:context="com.example.vittal.studentattendance.activity.FingerprintActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fingerprintIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="2dp"
            app:srcCompat="@drawable/ic_fingerprint" />

        <TextView
            android:id="@+id/fingerprintTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/fingerprint_signin"
            android:textColor="@color/fingerprint_text_primary"
            android:textSize="21sp" />


        <TextView
            android:id="@+id/fingerprintDescTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/desc_fingerprint"
            android:textAlignment="center"
            android:textColor="@color/fingerprint_text_primary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:textAlignment="center"
            android:textColor="@color/errorText"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/fingerprint_note"
        android:textAlignment="center"
        android:textColor="@color/fingerprint_text_primarydark"
        android:textSize="14sp" />

</RelativeLayout>
