<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/padding_5"
    app:cardUseCompatPadding="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rowMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_10"
                android:text="@string/name_title"
                android:textColor="@color/theme_red"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student Name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerNumberTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_10"
                android:text="@string/register_no_title"
                android:textColor="@color/theme_red"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registerNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123123"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/systemNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/systemNumberTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_10"
                android:text="@string/system_no_title"
                android:textColor="@color/theme_red"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/systemNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="323232"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dashboard_name_textsize"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inOutTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/inTimeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inTimeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_10"
                    android:text="@string/in_time_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dashboard_name_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/inTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14:55"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dashboard_date_textsize"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/outTimeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/outTimeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_10"
                    android:text="@string/out_time_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dashboard_name_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/outTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15:55"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dashboard_date_textsize"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>